Update speakers.yml previous commit for Kenneth Rose was for an incorrect job title.

--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -821,7 +821,7 @@ kenneth-rose:
   name: Kenneth Rose
   last: Rose
   bio:
-  work-title:
+  work-title: Project Manager
   institution:
   twitter-handle:
   slack-handle:
